<resources>
    <string name="app_name">ChatApplication</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">hello world</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="button">Button</string>
</resources>
