<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:layout_marginTop="30dp"
    tools:context="com.example.subhradeep.chatapplication.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#969494" />

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_name"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="124dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginName"
        android:layout_marginTop="25dp"
        android:gravity="center">
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="191dp" />

    </LinearLayout>
</RelativeLayout>
